@@ -1,3 +1,7 @@
+2008-08-20  Jonathan Pryor  <jpryor@novell.com>
+
+	* IEnumerableTest.cs: Add tests for .ToTuple(), .SequenceCompare().
+
 2008-08-19  Jonathan Pryor  <jpryor@novell.com>
 
 	* LambdaTest.cs: Fix RecFunc_P4_FuncNull() -- it was testing the wrong
