@@ -1,3 +1,9 @@
+2008-08-20  Jonathan Pryor  <jpryor@novell.com>
+
+	* Check.cs: Add Check.Comparer(), Check.List().
+	* IEnumerable.cs: Add SequenceCompare(), based on an idea from 
+	  Cory Nelson <phrosty@gmail.com>.
+
 2008-08-19  Jonathan Pryor  <jpryor@novell.com>
 
 	* Curry.cs: *Actually* Add the file.
